test/files/neg/nullary-override-3d.check
B_2.scala:3: warning: method with a single empty parameter list overrides method without any parameter list
class B extends A { override def x(): Int = 4 }
                                 ^
B_2.scala:7: error: method with a single empty parameter list overrides method without any parameter list
def x: String (defined in trait T1)
class Mix12b extends T1 with T2 { override def x() = "12b" }
                                               ^
1 warning
1 error
